[metadata]
name = signaturemean
version = 0.0.1
author = Raphael Mignot
author_email = raphael.mignot@univ-lorraine.fr
description = A toolbox for signature averaging.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Raph-AI/signaturemean
project_urls =
    Bug Tracker = https://github.com/Raph-AI/signaturemean/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
